--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,13 @@
 #
 
 # Name of the project/executable
-set(TARGET_NAME "KlemmUITemplate")
+set(TARGET_NAME "TetherInstaller")
 # C++ source code directory
-set(SOURCE_DIR "src/")
+set(SOURCE_DIR "Source/")
 # UI sheet directory
-set(MARKUP_DIR "ui/")
+set(MARKUP_DIR "UI/")
 # Directory where the generated UI headers should be placed
-set(MARKUP_HEADER_DIR "${SOURCE_DIR}/ui")
+set(MARKUP_HEADER_DIR "${SOURCE_DIR}/UI/Elements")
 # Directory where the shader files will be placed
 set(APP_SHADER_DIR "app/shaders")
 
@@ -20,16 +20,16 @@ cmake_minimum_required(VERSION 3.8)
 
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
-	cmake_policy(SET CMP0141 NEW)
-	set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
+    cmake_policy(SET CMP0141 NEW)
+    set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
 project(${TARGET_NAME})
 
 file(
-	GLOB_RECURSE
-	SOURCE_FILES
-	"${SOURCE_DIR}/**.cpp"
+    GLOB_RECURSE
+    SOURCE_FILES
+    "${SOURCE_DIR}/**.cpp"
 )
 
 # Add source to this project's executable.
@@ -38,29 +38,52 @@ add_executable(${TARGET_NAME} ${SOURCE_FILES})
 # On Windows, release builds shouldn't have a console.
 # Debug builds will have one. Remove this condition if you don't want this behavior.
 if (WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
-	target_link_options(${TARGET_NAME} PRIVATE "/Subsystem:Windows")
+    target_link_options(${TARGET_NAME} PRIVATE "/Subsystem:Windows")
 endif()
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
-	set_property(TARGET ${TARGET_NAME} PROPERTY CXX_STANDARD 20)
+    set_property(TARGET ${TARGET_NAME} PROPERTY CXX_STANDARD 20)
 endif()
 
-add_subdirectory("dependencies/KlemmUI/" "deps/KlemmUI")
+add_subdirectory("Dependencies/KlemmUI/" "deps/KlemmUI" EXCLUDE_FROM_ALL)
 
-target_link_libraries(${TARGET_NAME} PRIVATE KlemmUI)
+add_subdirectory("Dependencies/json" EXCLUDE_FROM_ALL)
+add_subdirectory("Dependencies/spdlog" EXCLUDE_FROM_ALL)
+
+# On Windows, libcurl can be built with schannel.
+# On Linux, something like OpenSLL is required, which is a pain to build and doesn't even use CMake.
+# Which is why on Linux the build uses a version of libcurl that's already installed on the system.
+if(WIN32)
+    set(CURL_USE_SCHANNEL ON)
+    set(BUILD_SHARED_LIBS OFF)
+    add_subdirectory("Dependencies/curl" "Dependencies/curl" EXCLUDE_FROM_ALL)
+    target_link_libraries(${TARGET_NAME} CURL::libcurl)
+else()
+    find_package(CURL)
+    if(CURL_FOUND)
+        include_directories(${CURL_INCLUDE_DIR})
+    else(CURL_FOUND)
+        message(FATAL_ERROR "Could not find the CURL library files.")
+    endif(CURL_FOUND)
+    target_link_libraries(${TARGET_NAME} ${CURL_LIBRARIES})
+endif()
+
+target_link_libraries(${TARGET_NAME} KlemmUI)
+target_link_libraries(${TARGET_NAME} nlohmann_json)
+target_link_libraries(${TARGET_NAME} spdlog::spdlog)
 
 # Parse UI files and generate C++ headers for them.
 # Ninja doesn't re-check dependencies after running the command, so it has to be run twice.
-add_subdirectory("dependencies/KlemmUI/Markup" "deps/bin")
+add_subdirectory("Dependencies/KlemmUI/Markup" "deps/bin" EXCLUDE_FROM_ALL)
 
 add_custom_target(
-	WriteHeaders
-	COMMENT "Running build command."
+    WriteHeaders
+    COMMENT "Running build command."
 )
 
 add_custom_command(
-	TARGET WriteHeaders
-	COMMAND $<TARGET_FILE:KlemmUIHT> -i ${CMAKE_SOURCE_DIR}/${MARKUP_DIR} -o ${CMAKE_SOURCE_DIR}/${MARKUP_HEADER_DIR}
+    TARGET WriteHeaders
+    COMMAND $<TARGET_FILE:KlemmUIHT> -i ${CMAKE_SOURCE_DIR}/${MARKUP_DIR} -o ${CMAKE_SOURCE_DIR}/${MARKUP_HEADER_DIR}
 )
 
 add_dependencies(WriteHeaders KlemmUIHT)
@@ -68,7 +91,7 @@ add_dependencies(${TARGET_NAME} WriteHeaders)
 
 # Copy KlemmUI shader files into the app dir
 add_custom_command(
-	TARGET ${TARGET_NAME} POST_BUILD
-	COMMAND ${CMAKE_COMMAND} -E copy_directory
-	${CMAKE_SOURCE_DIR}/dependencies/KlemmUI/Shaders ${CMAKE_SOURCE_DIR}/${APP_SHADER_DIR}
+    TARGET ${TARGET_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/dependencies/KlemmUI/Shaders ${CMAKE_SOURCE_DIR}/${APP_SHADER_DIR}
 )
